--- a/README.textile
+++ b/README.textile
@@ -1,18 +1,17 @@
-h1. 形態素解析エンジンMecab on iPhone（Cocoa Static Library版）のパッチリリースです。
+h1. 形態素解析エンジン Mecab on iPhone（リッチ版）のサンプルアプリケーションのパッチリリースです。
 
 形態素解析エンジン Mecab を iPhone 上で利用するサンプルアプリケーションの拡張です。
-中学生でも分かる一般的な表記での出力機能を追加しました。
+中学生でも分かる一般的な表記での出力機能を追加しましたので、是非活用下さい。
 
 !/FLCLjp/iPhone-libmecab/raw/master/screenshot.png!
 
 h2. ビルド方法（XCode 7.1 で普通にやって下さい）
 
 h2. ライセンス
-
 Mecab およびその関連ファイルについては、各ライブラリーのライセンスに従いご利用ください。
 サンプルアプリケーションについてはライセンスなどの制限は設けておりません。ご自由にご利用ください。
+UI/UX が気に入った状態になったら、App Store で無償公開する予定です。
 
 h2. 謝辞
-
 このパッチ作成を思い立ったのは、オリジナル作品の出来が良かったからです。
 作者の Watanabe Toshinori 様に感謝いたします。
