--- a/README.textile
+++ b/README.textile
@@ -3,7 +3,7 @@ h1. 形態素解析エンジン Mecab on iPhone（リッチ版）のサンプル
 形態素解析エンジン Mecab を iPhone 上で利用するサンプルアプリケーションの拡張です。
 中学生でも分かる一般的な表記での出力機能を追加しましたので、是非活用下さい。
 
-!/FLCLjp/iPhone-libmecab/raw/master/screenshot.png!
+!/tmatsugaki/iPhone-libmecab/screenshot3.jpg!
 
 h2. ビルド方法（XCode 7.1 で普通にやって下さい）
 
