--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,7 @@
-h1. 形態素解析エンジン Mecab on iPhoneのサンプルアプリケーションのパッチリリースです。
+h1. 形態素解析エンジン Mecab on iPhone のサンプルアプリケーションのパッチリリースです。
 
 形態素解析エンジン Mecab を iPhone 上で利用するサンプルアプリケーションの拡張です。
-中学生でも分かる一般的な表記での出力機能を追加しましたので、是非活用下さい。
+中学生でも分かる一般的な表記での出力機能を追加しましたので、是非ご活用下さい。
 
 !/tmatsugaki/iPhone-libmecab/master/screenshot3.jpg!
 
