--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,8 @@
 h1. 「形態素解析エンジン Mecab on iPhone のサンプルアプリケーション」の機能拡張版です。
 
-中学生でも分かる一般的な表記での出力機能を追加しましたので、是非ご活用下さい。
+出力結果を中学生でも分かる様な一般的な形式にしましたので、是非ご活用下さい。
 
+!/screenshot1.jpg!
 !/screenshot2.jpg!
 
 h2. ビルド方法（XCode 7.1 で普通にやって下さい）
