動作環境を iOS 9.1 にした。

--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
 h1. 「形態素解析エンジン Mecab on iPhone のサンプルアプリケーション」の機能拡張版です。
 
-出力結果を中学生でも分かる様な一般的な形式にしましたので、是非ご活用下さい。
+出力結果を中学生でも分かる一般的な形式にしましたので、是非ご活用下さい。
 
 !/screenshot1.jpg! !/screenshot2.jpg!
 
