ユーザーデフォルトの名称変更など
ユーザーデフォルトの名称変更
文例の XML ファイルの名称変更
コメントの変更

--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,7 @@
 h1. 「形態素解析エンジン Mecab on iPhone のサンプルアプリケーション」の機能拡張版です。
 
 出力結果を中学生でも分かる一般的な形式にしましたので、是非ご活用下さい。
+解析した文章は iTunesファイル共有で読み書き可能なファイルに逐次、追加・保存されますので適宜ご利用下さい。
 
 !/screenshot1.jpg! !/screenshot2.jpg!
 
