README.textile の変更

--- a/README.textile
+++ b/README.textile
@@ -1,8 +1,9 @@
 h1. 「形態素解析エンジン Mecab on iPhone のサンプルアプリケーション」の機能拡張版です。
 
-中学生でも分かる一般的な出力形式を追加しました。
-解析した文章は iTunesファイル共有で読み書き可能なファイルに逐次、追加・保存されますので再利用が可能です。
-起動時の解析結果は簡易表示ですが、タップや長押しにて相互にでモード（簡易／詳細）切り替えすることができます。
+中学生でも分かる一般的な出力形式（※）を追加しました。
+解析した文章は iTunesファイル共有で読み書き可能なファイルに逐次、追加・保存され再利用が可能です。
+起動時の解析結果は簡易表示ですが、タップや長押しにてモード（簡易／詳細）切り替えが可能です。
+※）「学校文法」ボタンが ON の場合は、各文節毎に色が付きます。
 
 !/screenshot1.jpg! !/screenshot2.jpg!
 
