早速ビルド番号2です。

--- a/README.textile
+++ b/README.textile
@@ -17,7 +17,7 @@ XCode 7.2 で普通にやって下さい。
 h2. ライセンス
 Mecab およびその関連ファイルについては、各ライブラリーのライセンスに従いご利用ください。
 サンプルアプリケーションについてはライセンスなどの制限は設けておりません。ご自由にご利用ください。
-UI/UX が気に入った状態になり次第、AppStore で無償公開します。
+本日（当方の誕生日）Apple にリリース申請しました。
 
 h2. 謝辞
 Mecab 開発者の工藤拓さん、それを iOS に適合された Watanabe Toshinori さんに感謝いたします。
